# google-it-automation

./: .gitignore  LICENSE  README.md
01 Crash Course on Python/: readme.md
01 Crash Course on Python/Notebooks/: C1M5L2_Methods_and_Classes_V3.ipynb  C1M5L3_Code_Reuse.ipynb  C1M5L3_Code_Reuse_V2.ipynb  C1M5_Object_Oriented_Programming_V7.ipynb  (+3 more)
01 Crash Course on Python/Notebooks/wordcloud/: C1M6L2_Final_Project.ipynb  WorldCloud.ipynb  dev-requirements.txt  mywords.txt  query_integral_image.py  requirements.txt  setup.cfg  wordcloud.py
01 Crash Course on Python/Notebooks/wordcloud/.ipynb_checkpoints/: C1M6L2_Final_Project-checkpoint.ipynb  WorldCloud-checkpoint.ipynb
01 Crash Course on Python/Notebooks/wordcloud/fileupload/: __init__.py  widget.py
01 Crash Course on Python/Notebooks/wordcloud/fileupload/static/: extension.js  widget.js
02 Using Python to Interact with the Operating System/: readme.md
C1 Crash Course on Python/: readme.md  welcome.md
C2 Using Python to Interact with the Operating System/: readme.md  welcome.md
C3 Introduction to Git and Github/: readme.md  welcome.md
C4 Troubleshooting and Debugging Techniques/: readme.md  welcome.md
C5 Configuration Management and the Cloud/: readme.md  welcome.md
C6 Automating Real-World Tasks with Python/: readme.md  welcome.md
c1_python-crash-course/: readme.md
c2_python-operating-system/: readme.md
c3_introduction-git-github/: readme.md
c4_troubleshooting-debugging-techniques/: readme.md
c5_configuration-management-cloud/: readme.md
c6_automating-real-world-tasks-python/: readme.md
(+819 files in other folders)
