[metadata]
name = fileupload
author = Alain Péteut
author-email = alain.peteut@yahoo.com
home-page = https://github.com/peteut/ipython-file-upload
summary = IPython file upload widget
description-file = README.rst
license = MIT
classifier =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Framework :: IPython
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    License :: OSI Approved :: MIT License
keywords =
    file
    upload
    ipython
    filereader
[files]
packages = fileupload
package_data =
    static = *.js
[bdist_wheel]
universal = 1
